# operating-system-experiment-sh

./: Cargo.toml  LICENSE  Makefile  README.md  bad_address.asm  build.rs  kernel.asm
src/: batch.rs  config.rs  lang_items.rs  link_app.S  loader.rs  logging.rs  main.rs  sbi.rs  sync.rs
src/syscall/: fs.rs  mod.rs  process.rs
src/trap/: context.rs  mod.rs  trap.S
user/: Cargo.toml  Makefile  build.rs
user/src/: console.rs  lang_items.rs  lib.rs  link_app.S  linker.ld  syscall.rs
